# cim-workflow-graph

./: Cargo.toml  flake.nix  readme.md
examples/: workflow_graph_example.rs
src/: lib.rs
tests/: infrastructure_tests.rs
tests/infrastructure/: mod.rs  test_event_stream.rs  test_message_routing.rs  test_nats_connection.rs
